--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,10 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.5.9",
-        "laravel/framework": "5.2.*",
-        "laravelcollective/html": "^5.2.0"
+        "php": "5.6.*",
+        "laravel/framework": "5.3.*",
+        "laravelcollective/html": "5.3.*",
+        "cviebrock/eloquent-sluggable": "^4.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -46,6 +47,9 @@
         ]
     },
     "config": {
-        "preferred-install": "dist"
+        "preferred-install": "dist",
+        "platform": {
+            "php": "5.6.4"
+        }
     }
 }
