--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "php": "5.6.*",
         "laravel/framework": "5.3.*",
         "laravelcollective/html": "5.3.*",
-        "cviebrock/eloquent-sluggable": "^4.0"
+        "cviebrock/eloquent-sluggable": "^4.0",
+        "unisharp/laravel-filemanager": "~1.8",
+        "intervention/image": "^2.4"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
